syntax = "proto3";

package helloWorld;

message HelloWorldRequest {
  string name = 1;
}

message HelloWorldReply {
  string message = 1;
}

service HelloWorld {
  rpc SayHello (HelloWorldRequest) returns (HelloWorldReply) {}
}
